added: landing page styling

--- a/index.html
+++ b/index.html
@@ -1,18 +1,116 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ISGA PIZZA.</title>
-  <link href="styles/style.css" media="screen" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://use.typekit.net/kra2zdy.css">
+  <title>Portfolio | Stephanie Jimenez</title>
+  <link href="./styles/style.css" media="screen" rel="stylesheet" type="text/css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+  <header>
+    <div>
+      <a href="#" class="logo">SJ</a>
 
-  
+      <nav>
+        <ul>
+          <li>
+            <a href="#">work</a>
+          </li>
+          <li>
+            <a href="#">experience</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+    <section>
+      <h1>Super cool heading that says something about you!</h1>
+
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eveniet veritatis nobis assumenda, consequuntur
+        delectus ipsum temporibus quasi quia dolorum autem dolorem voluptas ratione harum in consequatur sint laudantium
+        culpa!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eveniet veritatis nobis assumenda, consequuntur
+        delectus ipsum temporibus quasi quia dolorum autem dolorem voluptas ratione harum in consequatur sint laudantium
+        culpa!</p>
+
+      <a class="btn" href="mailto:stephanie2096726@gmail.com">Get in touch with me</a>
+    </section>
+
+    <section>
+      <h1>My work</h1>
+
+      <ul class="grid">
+        <li>
+          <a href="#">
+            <figure>
+              <picture>
+                <img src="https://images.unsplash.com/photo-1546527868-ccb7ee7dfa6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="">
+              </picture>
+
+              <figcaption>
+                <p>Title</p>
+              </figcaption>
+            </figure>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <figure>
+              <picture>
+                <img src="https://images.unsplash.com/photo-1546527868-ccb7ee7dfa6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="">
+              </picture>
+
+              <figcaption>
+                <p>Title</p>
+              </figcaption>
+            </figure>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <figure>
+              <picture>
+                <img src="https://images.unsplash.com/photo-1546527868-ccb7ee7dfa6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="">
+              </picture>
+
+              <figcaption>
+                <p>Title</p>
+              </figcaption>
+            </figure>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <figure>
+              <picture>
+                <img src="https://images.unsplash.com/photo-1546527868-ccb7ee7dfa6a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="">
+              </picture>
+
+              <figcaption>
+                <p>Title</p>
+              </figcaption>
+            </figure>
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <a href="#" class="logo">SJ</a>
+  </footer>
+
+
 </body>
 
 </html>
