--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <title>Portfolio | Stephanie Jimenez</title>
   <link href="./styles/style.css?v=3" media="screen" rel="stylesheet" type="text/css">
 
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet"> -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
     <div>
-      <a href="#" class="logo">SJ</a>
+      <a href="#" class="logo"><span>S</span><span>J</span></a>
 
       <nav>
         <ul>
@@ -104,10 +108,18 @@
         </li>
       </ul>
     </section>
+
+    <section>
+      <h1>Experience</h1>
+    
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eveniet veritatis nobis assumenda, consequuntur
+        delectus ipsum temporibus quasi quia dolorum autem dolorem voluptas ratione harum in consequatur sint laudantium
+        culpa!</p>
+    </section>
   </main>
 
   <footer>
-    <a href="#" class="logo">SJ</a>
+    <a href="#" class="logo"><span>S</span><span>J</span></a>
   </footer>
 
 
