added some text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <span>&#9999;&#128421;</span>
       <h1>Something cool about you here, stuff etc <span class="highlighter">very cool!</span></h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquet neque mauris. Suspendisse potenti. Praesent ac
+      <p>Hi! My name is Stephanie Jimenez and I am motion graphic designer. consectetur adipiscing elit. Nunc aliquet neque mauris. Suspendisse potenti. Praesent ac
       nisl semper, porttitor nibh nec, pretium lorem. Integer facilisis rutrum orci non suscipit. Etiam viverra et arcu non
       ultricies. Phasellus maximus eget neque consectetur ultricies. Fusce a volutpat dolor, in venenatis mi. Nullam quis arcu
       at libero vehicula ultricies.</p>
