--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
       <span>&#9999;&#128421;</span>
       <h1>Something cool about you here, stuff etc <span class="highlighter">very cool!</span></h1>
 
-      <p>Hi! My name is Stephanie Jimenez and I am motion graphic designer. consectetur adipiscing elit. Nunc aliquet neque mauris. Suspendisse potenti. Praesent ac
-      nisl semper, porttitor nibh nec, pretium lorem. Integer facilisis rutrum orci non suscipit. Etiam viverra et arcu non
-      ultricies. Phasellus maximus eget neque consectetur ultricies. Fusce a volutpat dolor, in venenatis mi. Nullam quis arcu
+      <p>Hi! My name is Stephanie Jimenez and I am a motion graphic designer. I have been studying Design & Production
+        at the University of Texas at Dallas since 2018. Phasellus maximus eget neque consectetur ultricies. Fusce a volutpat dolor, in venenatis mi. Nullam quis arcu
       at libero vehicula ultricies.</p>
 
       <!-- <a class="btn" href="mailto:stephanie2096726@gmail.com">Get in touch with me</a> -->
