--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section>
       <span>&#9999;&#128421;</span>
-      <h1>Something cool about you here, stuff etc <span class="highlighter">very cool!</span></h1>
+      <h1>Hi cool about you here, stuff etc <span class="highlighter">very cool!</span></h1>
 
       <p>Hi! My name is Stephanie Jimenez and I am a motion graphic designer. I have been studying Design & Production
         at the University of Texas at Dallas since 2018. Phasellus maximus eget neque consectetur ultricies. Fusce a volutpat dolor, in venenatis mi. Nullam quis arcu
