--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       <nav>
         <ul>
           <li class="active">
-            <a class="box-shadow" href="#"><span>about me</span></a>
+            <a class="menu-item box-shadow" href="#about"><span>about me</span></a>
           </li>
           <li>
-            <a class="box-shadow" href="#"><span>my work</span></a>
+            <a class="menu-item box-shadow" href="#work"><span>my work</span></a>
           </li>
           <li>
-            <a class="box-shadow" href="#"><span>experience</span></a>
+            <a class="menu-item box-shadow" href="#experience"><span>experience</span></a>
           </li>
         </ul>
       </nav>
@@ -43,7 +43,7 @@
 
   <main>
 
-    <section>
+    <section id="about">
       <span class="emoji">&#127912; &#128421;</span>
       <h1>Something cool about you here, stuff etc <span class="highlighter">very cool!</span></h1>
 
@@ -54,7 +54,7 @@
       <!-- <a class="btn" href="mailto:stephanie2096726@gmail.com">Get in touch with me</a> -->
     </section>
 
-    <section>
+    <section id="work">
       <ul class="grid">
         <li>
           <a class="box-shadow" href="#">
@@ -131,7 +131,7 @@
       </ul>
     </section>
 
-    <section>
+    <section id="experience">
       <h1>Experience</h1>
     
       <ul class="timeline">
@@ -199,7 +199,7 @@
     <a href="#" class="logo box-shadow"><span>SJ</span></a>
   </footer>
 
-
+  <script src="./js/scroll-helper.js"></script>
 </body>
 
 </html>
