fixed header on detail pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="work">
       <ul class="grid">
         <li>
-          <a class="box-shadow" href="#">
+          <a class="box-shadow" href="feeding-pets.html">
             <figure>
               <picture>
                 <img src="./images/dummy-thumbnail.png" alt="">
@@ -75,10 +75,10 @@
           </a>
         </li>
         <li>
-          <a class="box-shadow" href="#">
+          <a class="box-shadow" href="lyric-video.html">
             <figure>
               <picture>
-                <img src="./images/dummy-thumbnail.png" alt="">
+                <img src="./images/phoenix-thumbnail.png" alt="">
               </picture>
 
               <figcaption>
@@ -93,10 +93,10 @@
           </a>
         </li>
         <li>
-          <a class="box-shadow" href="#">
+          <a class="box-shadow" href="reconnect.html">
             <figure>
               <picture>
-                <img src="./images/dummy-thumbnail.png" alt="">
+                <img src="./images/Jimenez_Stephanie_reconnect_v2.gif" alt="">
               </picture>
 
               <figcaption>
@@ -111,10 +111,10 @@
           </a>
         </li>
         <li>
-          <a class="box-shadow" href="#">
+          <a class="box-shadow" href="robot.html">
             <figure>
               <picture>
-                <img src="./images/dummy-thumbnail.png" alt="">
+                <img src="./images/robot-thumbnail.png" alt="">
               </picture>
 
               <figcaption>
