--- a/reconnect.html
+++ b/reconnect.html
@@ -15,28 +15,25 @@
 <body>
 
   <header>
-    <a href="#" class="logo box-shadow"><span>SJ</span></a>
+    <div>
 
-    <input class="hamburger-icon" type="checkbox" name="hamburger" id="hamburger">
-    <label for="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
+      <a href="#" class="logo box-shadow"><span>SJ</span></a>
 
-    <nav>
-      <ul>
-        <li>
-          <a class="active box-shadow" href="#"><span>about me</span></a>
-        </li>
-        <li>
-          <a class="box-shadow" href="#"><span>my work</span></a>
-        </li>
-        <li>
-          <a class="box-shadow" href="#"><span>experience</span></a>
-        </li>
-      </ul>
-    </nav>
+      <input class="hamburger-icon" type="checkbox" name="hamburger" id="hamburger">
+      <label for="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+
+      <nav>
+        <ul>
+          <li class="active">
+            <a class="menu-item box-shadow" href="index.html"><span>go back</span></a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
