--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a class="box-shadow" href="feeding-pets.html">
             <figure>
               <picture>
-                <img src="./images/dummy-thumbnail.png" alt="">
+                <img src="./images/feeding-pets.png" alt="">
               </picture>
 
               <figcaption>
