added: new styling and updated script for nav

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio | Stephanie Jimenez</title>
-  <link href="./styles/style.css?v=5" media="screen" rel="stylesheet" type="text/css">
+  <link href="./styles/style.css?v=6" media="screen" rel="stylesheet" type="text/css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +53,7 @@
          I decided to improve my skills in something I enjoy and pursue a career in it. I love messing inside of After Effects finding new 
         things to do which always keeps me interested.</p>
 
-      <!-- <a class="btn" href="mailto:stephanie2096726@gmail.com">Get in touch with me</a> -->
+      <a class="btn" href="mailto:stephanie2096726@gmail.com"><span>Get in touch with me</span></a>
     </section>
 
     <section id="work">
@@ -139,13 +139,13 @@
       <ul class="timeline">
         <li>
           <div>
-            <p>aug 2016 - may 2018</p>
+            <p>jun 2019 - present</p>
           </div>
 
           <a class="box-shadow" href="#">
             <div>
-              <h3>Mountain View College in Dallas</h3>
-              <p>Spent 2 years figuring out what I wanted to do in life.</p>
+              <h3>Alamo Drafthouse Cinema</h3>
+              <p>Currently a server at the Alamo Drafthouse Cinema.</p>
             </div>
             
             <span class="btn--arrow"><img src="./images/icons/arrow-down.svg" alt=""></span>
@@ -181,13 +181,13 @@
         </li>
         <li>
           <div>
-            <p>jun 2019 - present</p>
+            <p>aug 2016 - may 2018</p>
           </div>
 
           <a class="box-shadow" href="#">
             <div>
-              <h3>Alamo Drafthouse Cinema</h3>
-              <p>Currently a server at the Alamo Drafthouse Cinema.</p>
+              <h3>Mountain View College in Dallas</h3>
+              <p>Spent 2 years figuring out what I wanted to do in life.</p>
             </div>
             
             <span class="btn--arrow"><img src="./images/icons/arrow-down.svg" alt=""></span>
