--- a/feeding-pets.html
+++ b/feeding-pets.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio | Stephanie Jimenez</title>
-  <link href="./styles/style.css?v=4" media="screen" rel="stylesheet" type="text/css">
+  <link href="./styles/style.css?v=5" media="screen" rel="stylesheet" type="text/css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
   <header>
     <div>
 
-      <a href="#" class="logo box-shadow"><span>SJ</span></a>
+      <a href="index.html" class="logo box-shadow"><span>SJ</span></a>
 
       <input class="hamburger-icon" type="checkbox" name="hamburger" id="hamburger">
       <label for="hamburger">
@@ -50,7 +50,7 @@
   </main>
 
   <footer>
-    <a href="#" class="logo box-shadow"><span>SJ</span></a>
+    <a href="index.html" class="logo box-shadow"><span>SJ</span></a>
   </footer>
 
 
