--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
     <section id="about">
       <span class="emoji">&#127912; &#128421;</span>
-      <h1>Something cool about you here, stuff etc <span class="highlighter">very cool!</span></h1>
+      <h1>hello! welcome I am a <span class="highlighter">motion graphic designer!</span></h1>
 
-      <p>Hi! My name is Stephanie Jimenez and I am a motion graphic designer. I have been studying Design & Production
-        at the University of Texas at Dallas since 2018. I really enjoy learning new things and I am not afraid to pursue different areas of animation. 
-         During my studies here at the university I found out I really enjoyed making motion graphic designs. Ever since then 
+      <p>Hi! My name is Stephanie Jimenez and I have been studying Design & Production at the University of Texas at Dallas since 2018. I really enjoy learning new things and 
+        I am not afraid to pursue different areas of animation. During my studies here at the university I found out I really enjoyed making motion graphic designs. Ever since then 
          I decided to improve my skills in something I enjoy and pursue a career in it. I love messing inside of After Effects finding new 
-        things to do which always keeps me interested.</p>
+        things which always keeps me interested. I am good at working well with others and able to collaborate and communicate well with others. I have some experience in
+        3D modeling in Blender and want to continue learning. Lately I am interested in web design and learning how to build websites. Take a look of some of the work I have done down below!</p>
 
       <!-- <a class="btn" href="mailto:stephanie2096726@gmail.com">Get in touch with me</a> -->
     </section>
@@ -142,7 +142,7 @@
             <p>aug 2016 - may 2018</p>
           </div>
 
-          <a class="box-shadow" href="#">
+          <a class="box-shadow" href="https://www.dallascollege.edu/about/mvc/pages/default.aspx" target="_blank">
             <div>
               <h3>Mountain View College in Dallas</h3>
               <p>Spent 2 years figuring out what I wanted to do in life.</p>
@@ -156,7 +156,7 @@
             <p>aug 2018 - present</p>
           </div>
 
-          <a class="box-shadow" href="#">
+          <a class="box-shadow" href="https://www.utdallas.edu/" target="_blank">
             <div>
               <h3>University of Texas at Dallas</h3>
               <p>Persuing my Bachelors in School of Arts, Technology, and Emerging Communication.</p>
@@ -170,7 +170,7 @@
             <p> may 2018 - jan 2019</p>
           </div>
 
-          <a class="box-shadow" href="#">
+          <a class="box-shadow" href="https://utdcomets.com/" target="_blank">
             <div>
               <h3>UTD Athletics</h3>
               <p>Helped set up sports events.</p>
@@ -184,7 +184,7 @@
             <p>jun 2019 - present</p>
           </div>
 
-          <a class="box-shadow" href="#">
+          <a class="box-shadow" href="https://drafthouse.com/dfw" target="_blank">
             <div>
               <h3>Alamo Drafthouse Cinema</h3>
               <p>Currently a server at the Alamo Drafthouse Cinema.</p>
