--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <p>Hi! My name is Stephanie Jimenez and I have been studying Design & Production at the University of Texas at Dallas since 2018. I really enjoy learning new things and 
         I am not afraid to pursue different areas of animation. During my studies here at the university I found out I really enjoyed making motion graphic designs. Ever since then 
-         I decided to improve my skills in something I enjoy and pursue a career in it. I love messing inside of After Effects finding new 
+         I decided to improve my skills in something I enjoy and pursue a career in it. I love playing within After Effects finding new 
         things which always keeps me interested. I am good at working well with others and able to collaborate and communicate well with others. I have some experience in
         3D modeling in Blender and want to continue learning. Lately I am interested in web design and learning how to build websites. Take a look of some of the work I have done down below!</p>
 
