sorta fixed highlighter util

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio | Stephanie Jimenez</title>
-  <link href="./styles/style.css?v=6" media="screen" rel="stylesheet" type="text/css">
+  <link href="./styles/style.css?v=7" media="screen" rel="stylesheet" type="text/css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,7 +47,7 @@
 
     <section id="about">
       <span class="emoji">&#127912; &#128421;</span>
-      <h1>hello! welcome I am a <span class="highlighter">motion graphic designer!</span></h1>
+      <h1>Hello! Welcome I am a <span class="highlighter">motion</span><span class="highlighter">graphic</span><span class="highlighter">designer</span>!</h1>
 
       <p>Hi! My name is Stephanie Jimenez and I have been studying Design & Production at the University of Texas at Dallas since 2018. I really enjoy learning new things and 
         I am not afraid to pursue different areas of animation. During my studies here at the university I found out I really enjoyed making motion graphic designs. Ever since then 
