--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </section>
 
     <section id="experience">
-      <h1>Experience</h1>
+      <h1>Work Experience</h1>
     
       <ul class="timeline">
         <li>
