added final project

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
           <a class="box-shadow" href="robot.html">
             <figure>
               <picture>
-                <img src="./images/robot-thumbnail.png" alt="">
+                <img src="./images/Senior_Final.gif" alt="">
               </picture>
 
               <figcaption>
                 <div>
-                  <h3>SciFi Robot</h3>
-                  <p>SciFi robot build using different codes built into After Effects.</p>
+                  <h3>9 Tiles: The Basics of Design - Senior Capstone</h3>
+                  <p>Designs built in after effects compiled in one composition.</p>
                 </div>
 
                 <span class="btn--arrow"><img src="./images/icons/arrow-down.svg" alt=""></span>
