--- a/robot.html
+++ b/robot.html
@@ -40,13 +40,15 @@
 
   <main>
       <section>
-        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/690662015?h=37ac33dd4a&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Feeding Pets of the Homeless"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+        <img class="gif" src="./images/Senior_Final.gif" alt="Capstone gif">
+        </script>
       </section>
       <section>
-        <h1>SciFi Robot</h1>
+        <h1>9 Tiles: The Basics of Design</h1>
          <p>
-           A short clip of a little robot I had to create for a class assignment. All elements and assests were created in After Affects. 
-           Each part of the robot is its own composition and put together to make the final piece.
+           Nine different designs using motion graphics. All designs are created in After Effects. The purpose of the project was to showcase
+           all the different unique designs created by me and testing my skills in motion graphics. I discovered motion graphics back in 2021 and 
+           decided to pursue that career and enhance my skills by taking classes that well help me understand more about animation and design. 
             </p>
       </section>
   </main>
