--- a/robot.html
+++ b/robot.html
@@ -40,7 +40,7 @@
 
   <main>
       <section>
-        <img class="gif" src="./images/Senior_Final.gif" alt="Capstone gif">
+        <img class="gif" src="./images/Senior_Final.gif" alt="Senior Capstone gif">
         </script>
       </section>
       <section>
