--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               <figcaption>
                 <div>
                   <h3>9 Tiles: The Basics of Design - Senior Capstone</h3>
-                  <p>Designs built in after effects compiled in one composition.</p>
+                  <p>Designs built in after effects and compiled into one composition.</p>
                 </div>
 
                 <span class="btn--arrow"><img src="./images/icons/arrow-down.svg" alt=""></span>
